2010-07-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-trackWithEvent:):
	* Source/NSMenu.m (-shiftOnScreen): Correctly handle the cases
	where a menu is partially off screen on the top and the left side
	of the screen, respectively. This fixes bug #30439.

2010-07-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSInputManager.m: Use NSDeleteCharacter for the backspace key.

2010-07-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-keyDown:): Correction of last change.

2010-07-25 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSSplitView.m (-adjustSubviews):
	Call setFrame: on subviews rather than setFrameSize: followed
	by setFrameOrigin:, so that the subviews never have an inconsistent
	frame (old origin + new size).

	This was messing up cases with NSOpenGLView's inside split views,
	(e.g. usr-apps/examples/gui/MyGL)	because the NSOpenGLView,
	when notified of its size changing, was using the invalid origin.

2010-07-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m,
	* Source/NSInputManager.m,
	* Source/NSMatrix.m,
	* Source/NSWindow.m: Add support for backtab character.

2010-07-22 19:35-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSTheme.m: Call method _setArchiveByName: with YES so that
	images loaded by a theme will not be persisted as image data, but
	rather as references.  This will avoid an issue with saving theme
	images when saving files in Gorm while a theme is loaded.
	* Source/NSImage.m: Added method _setArchiveByName:.

2010-07-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m (-setWindowFrameForAttachingToRect...):
	Resize the menu view if needed. This should correct part of bug #30025.

2010-07-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m (-setMenuView:): Override super class
	method so that the button's appearance is not inadvertently
	changed when the menu view is set.

2010-06-23  Wolfgang Lux  <wolfgang.lux@gmail.com>
